--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@ header {
 
 header h1 {
   margin: 0;
+  font-size: 4rem;
   font-family: 'IM Fell English SC', sans-serif;
   background: linear-gradient(40deg, #616161, #616161, #f5f5f5, #f5f5f5);
   background-clip: text;
