--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,16 @@
   padding: 0;
 }
 
-body {
-  background-color: #121212;
+html {
   font-family: 'Roboto', sans-serif;
+  line-height: 1.5;
+  background: radial-gradient(#252525, #121212);
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  min-height: 80rem;
 }
 
 main {
@@ -24,6 +31,7 @@ main {
 
 main h2 {
   text-align: center;
+  font-size: 3rem;
   font-family: 'IM Fell English SC';
   margin: 0 0 1.5rem 0;
   color: #121212;
@@ -42,6 +50,12 @@ main h2 {
 #about-items li {
   width: 10rem;
   text-align: center;
+}
+
+#about-items li img {
+  height: 8rem;
+  width: 6rem;
+  object-fit: cover;
 }
 
 #about-items li h3 {
