--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,58 @@ main h2 {
 #about-items li p {
   font-size: 0.9rem;
 }
+
+#subgenres {
+  margin: 3rem auto;
+}
+
+#subgenres h2 {
+  text-align: left;
+  background: linear-gradient(40deg, #616161, #616161, #f5f5f5, #f5f5f5);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
+}
+
+#subgenres menu {
+  margin: 1rem 0;
+  padding: 0;
+  display: flex;
+  gap: 0.5rem;
+  list-style: none;
+}
+
+#subgenres menu button {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 6px;
+  background-color: transparent;
+  color: #f5f5f5;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+#subgenres menu button:hover {
+  background-color: #121212;
+}
+
+#subgenres menu button.active {
+  background-color: #121212;
+}
+
+#tab-content {
+  padding: 1rem;
+  border-radius: 6px;
+  background-color: #121212;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+}
+
+#tab-content h3 {
+  margin: 0;
+  color: #f5f5f5;
+}
+
+#tab-content p {
+  color: #f5f5f5;
+}
