--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,14 +2,15 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  padding-bottom: 2rem;
 }
 
 .card {
   flex: 1;
   padding: 1rem;
-  height: 300px;
-  min-width: 200px;
-  max-width: 200px;
+  height: 320px;
+  min-width: 220px;
+  max-width: 220px;
   border-radius: 6px;
   color: #f5f5f5;
   background-color: #121212;
@@ -17,7 +18,15 @@
 }
 
 .card img {
-  height: 200px;
-  width: 200px;
+  height: 220px;
+  width: 220px;
   border-radius: 6px;
+}
+
+.card h3 {
+  text-align: center;
+}
+
+.card p {
+  text-align: center;
 }
