--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@ main h2 {
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 6px;
-  background-color: transparent;
+  background-color: #121212;
   color: #f5f5f5;
   font-size: 1rem;
   cursor: pointer;
@@ -103,11 +103,36 @@ main h2 {
 }
 
 #subgenres menu button:hover {
-  background-color: #121212;
+  background-color: #f5f5f5;
+  color: #121212;
 }
 
 #subgenres menu button.active {
-  background-color: #121212;
+  background-color: #f5f5f5;
+  color: #121212;
+}
+
+#tab-header-container {
+  margin: 2rem 0;
+  display: flex;
+  gap: 1.5rem;
+  align-items: center;
+}
+
+#tab-header-container img {
+  width: 3rem;
+  object-fit: contain;
+  fill: #f5f5f5;
+}
+
+#tab-header-container h3 {
+  margin: 0;
+  color: #f5f5f5;
+}
+
+#tab-header-container p {
+  margin: 0;
+  color: #f5f5f5;
 }
 
 #tab-content {
