--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,3 +12,17 @@ header h1 {
   -webkit-text-fill-color: transparent;
   filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
 }
+
+nav ul {
+  width: 90%;
+  max-width: 40rem;
+  margin: auto;
+  color: #f5f5f5;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+nav li {
+  list-style: none;
+}
